--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,7 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/next",
-      "config": {
-        "installCommand": "pnpm install",
-        "buildCommand": "pnpm run build"
-      }
+      "use": "@vercel/next"
     }
-  ],
-  "build": {
-    "env": {
-      "VERCEL_BUILD_COMMAND": "pnpm run build"
-    }
-  }
+  ]
 } 
